--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A front-end practice project from https://www.frontendmentor.io/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:sass": "node-sass -w scss -o css"
   },
   "repository": {
     "type": "git",
